Tests/RunCMake/CMakePresets/JSONParseError-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/JSONParseError: JSON parse error
Errors:
[^
]*JSONParseError/CMakePresets.json:
\* Line 1, Column 1
  Syntax error: value, object or array expected\.
\* Line 1, Column 1
  A valid JSON document must be either an array or an object value\.$
